# FCG_VisualizzatoreCamminata

./: .gitignore  .~lock.Relazione.odt#  CMakeLists.txt  Presentazione_PF.odp  README.md  Relazione.odt
RELEASES/: CMakeLists.txt
RELEASES/FCG_VisualizzatoreCamminata-0.1/: CMakeLists.txt  README.md
RELEASES/FCG_VisualizzatoreCamminata-0.1/src/csv/headers/: csv.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.1/src/joints/headers/: rigid_joint.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.1/src/joints/methods/: rigid_joint_class.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.1/src/pieces/headers/: coscia.hpp  joint_piece.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.1/src/pieces/methods/: coscia_class.cpp  sensore_class.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.1/src/rigidbody/methods/: rb_class.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.2/: CMakeLists.txt  README.md
RELEASES/FCG_VisualizzatoreCamminata-0.2/src/: include.hpp  testMain.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.2/src/joints/headers/: joint_interface.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.2/src/pieces/headers/: piece_interface.hpp  sensore.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.3/: CMakeLists.txt  README.md
RELEASES/FCG_VisualizzatoreCamminata-0.3/src/: testMain.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.3/src/joints/methods/: pivot_joint_class.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.3/src/pieces/headers/: caviglia.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.3/src/pieces/methods/: caviglia_class.cpp  coscia_class.cpp  sensore_class.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.3/src/rigidbody/headers/: rb.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.3/src/rigidbody/methods/: rb_class.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.4/src/: include.hpp  sfml_util.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.4/src/pieces/headers/: piece_interface.hpp  sensore.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.5/data/: imu_1_data_sync.csv
RELEASES/FCG_VisualizzatoreCamminata-0.5/src/joints/headers/: pivot_joint.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.5/src/pieces/headers/: sensore.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.5/src/pieces/methods/: caviglia_class.cpp  coscia_class.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.6/: CMakeLists.txt  README.md
RELEASES/FCG_VisualizzatoreCamminata-0.6/data/: caviglia_filt.csv
RELEASES/FCG_VisualizzatoreCamminata-0.6/src/collections/headers/: lower_body.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.6/src/pieces/headers/: sensore.hpp  torso.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.6/src/rigidbody/headers/: rb.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.7/: CMakeLists.txt
RELEASES/FCG_VisualizzatoreCamminata-0.7/src/: sfml_util.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.7/src/collections/headers/: collection_interface.hpp  gamba.hpp  include_pieces.hpp  lower_body.hpp
RELEASES/FCG_VisualizzatoreCamminata-0.7/src/collections/methods/: gamba.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.7/src/joints/methods/: pivot_joint_class.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.8/: CMakeLists.txt  README.md
RELEASES/FCG_VisualizzatoreCamminata-0.8/src/: sfml_util.cpp  testMain.cpp
RELEASES/FCG_VisualizzatoreCamminata-0.9/: CMakeLists.txt
RELEASES/FCG_VisualizzatoreCamminata-0.9/data/: caviglia_dx.csv  coscia_sx.csv
RELEASES/FCG_VisualizzatoreCamminata-0.9/src/: include.hpp
RELEASES/FCG_VisualizzatoreCamminata-1.0/: .gitignore  CMakeLists.txt
RELEASES/FCG_VisualizzatoreCamminata-1.0/src/: include.hpp
RELEASES/FCG_VisualizzatoreCamminata-1.1/: CMakeLists.txt
RELEASES/FCG_VisualizzatoreCamminata-1.1/src/: sfml_util.cpp
RELEASES/data/: caviglia_filtD.csv  coscia_filtS.csv
StudioDati/: .~lock.Presentazione_Dani_Tommaso.odp#  (+3 more)
(+107 files in other folders)
